refactor: update SecurityConfig for improved CORS handling and security filter chain